added font awasome

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>developer portfolio</title>
      <link rel="stylesheet" href="styles/portfolio.css">
      <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-</head>     
+     <script src="https://kit.fontawesome.com/f55df8bb89.js" crossorigin="anonymous"></script>
+    </head>     
 <body>
     <header class="header">
         <nav>
@@ -26,7 +27,7 @@
                 <h1 class="banner-title">Mary Hardy</h1>
             <p class="banner-description">shot what able cold new see hold.Friendly as an betrayed 
                 formerly he.Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download Cv</button>
             
            
             </div>
@@ -188,7 +189,7 @@
             </div>
 
             <div class="resume-btn">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
 
         </section>
